--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "rn-webview-bridge",
-  "version": "1.1.1",
+  "name": "@heryordejy/rn-webview-bridge",
+  "version": "1.1.3",
   "description": "React Native WebView Javascript Bridge - updated",
   "license": "MIT",
-  "author": "Ali Najafizadeh",
-  "contributors": [
-    "Ayodeji Yusuf Oyebode <heryordejy.dev@gmail.com>"
-  ],
+  "author": "Ayodeji Yusuf Oyebode <heryordejy.dev@gmail.com>",
+  "contributors": [],
   "directories": {
     "example": "examples",
     "lib": "webview-bridge"
